[package]
name = "a3conv"
version = "0.0.1"
edition = "2021"
authors = ["James Lennon"]
description = "A tool to convert A3 files to a more usable format."
license = "MIT/Apache-2.0"
publish = false
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

# TODO: Add a UI
#default-run = "a3conv_cli"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
#missing_docs = "warn"
#unsafe_code = "deny"

[workspace.dependencies]
image = { path = "crates/image_rs/", default-features = false, features = [
    "pcx",
    "png",
    "jpeg",
] }

clap = { version = "4.5", features = ["derive"] }
nalgebra = "0.33"

[dependencies]
image = { workspace = true }

clap = { workspace = true }
nalgebra = { workspace = true }

[[bin]]
name = "a3conv_cli"
path = "src/bin/cli.rs"

# TODO: Add a UI
#[[bin]]
#name = "a3conv_ui"
#path = "src/bin/ui.rs"

[profile.release]
opt-level = 3
lto = true

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2
